    - Changed that the belt capacity tech from this mod doesn't consume promethium science packs.
  Bugfixes:
    - Fixed that spidertrons and other vehicles would disappear when a hex core spawns underneath them.
    - Fixed that connecting cliff sprites were not updated after a hex core spawns in their way, destroying them.
  Optimizations:
    - Throttled processing for most frame-dropping events: item rank ups (trade productivity updates), hex tile placement, trade overview calculations.
    - When multiple players are using the trade overview simulataneously, the calculations are load balanced (full speed for one player, half speed for two players, etc.).
    - Optimized sorting trades in the trade overview by total item value.
---------------------------------------------------------------------------------------------------
Version: 1.3.12
Date: 16/12/25
  Bugfixes:
    - Fixed that massively overspending coins while receiving passive coin buffs caused an explosion of hexaprism coin gain.
---------------------------------------------------------------------------------------------------
Version: 1.3.11
Date: 16/12/25
  Changes:
    - Stopped spamming the logs.
---------------------------------------------------------------------------------------------------
Version: 1.3.10
Date: 16/12/25
  Changes:
    - Increased the Passive Coins buff interval of coin accumulation from 10 seconds to 30 seconds.
  Bugfixes:
    - Fixed incorrect tooltip for "Buy x" button in Quantum Bazaar when changing the slider.
    - Fixed that the command /regenerate-trades could put interplanetary trades on the wrong planets.
    - Fixed that the claim tool would sometimes claim dungeon hexes.
    - Fixed that the claim tool would sometimes ignore claiming the selected hexes.
    - Fixed that the claim tool would sometimes let you claim a hex you cannot afford, taking your coins anyway.
    - Fixed rare crash upon dungeon generation.